<resources>
    <string name="app_name">Rick-And-Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Character</string>
    <string name="episode">Episode</string>
    <string name="location">Location</string>
    <string name="main">Main</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
</resources>