<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/character"
    app:startDestination="@id/characterListFragment">

    <fragment
        android:id="@+id/characterListFragment"
        android:name="com.example.rick_and_morty.ui.CharacterListFragment"
        android:label="@string/character"
        tools:layout="@layout/fragment_character_list" />
    <fragment
        android:id="@+id/episodeListFragment"
        android:name="com.example.rick_and_morty.ui.EpisodeListFragment"
        android:label="@string/episode"
        tools:layout="@layout/fragment_episode_list" />
    <fragment
        android:id="@+id/locationListFragment"
        android:name="com.example.rick_and_morty.ui.LocationListFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location_list" />
</navigation>