<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.CharacterListFragment">


        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="2dp"
            app:chipSpacingHorizontal="16dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/main_item_recycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/my_blue"
                app:chipCornerRadius="10dp">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/alive_item_recycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/alive"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/my_green"
                app:chipCornerRadius="10dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dead_item_recycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dead"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/my_red"
                app:chipCornerRadius="10dp">

            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/unknown_item_recycler"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/unknown"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/my_yellow"
                app:chipCornerRadius="10dp">

            </com.google.android.material.chip.Chip>
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>